# LSSLaucnher

./: .gitignore  lssinstaller.iss  main.py  pyproject.toml  update.py
.github/workflows/: windows.yml
src/: main.py
src/app/: __init__.py  app.py
src/flutter/: puspec.yaml
src/launcher/app/: __init__.py  app.py
src/launcher/screens/: __init__.py  about.py  auth.py  home.py  screen.py  settings.py
src/launcher/utils/: __init__.py  api.py  auth.py  download.py  helpers.py  hwid.py  install_pack.py  screen_manager.py
src/screens/: __init__.py  about.py  auth.py  home.py  merge.py  screen.py  settings.py
src/utils/: __init__.py  api.py  auth.py  dota_patcher.py  download.py  helpers.py  hwid.py  install_pack.py  screen_manager.py
