[project]
name = "LSSLauncher"
version = "0.1.0"
description = ""
authors = [
    {name = "Light"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "app", from = "src" },
    { include = "screens", from = "src" },
    { include = "utils", from = "src" },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
