[project]
name = "LSSLauncher"
version = "0.1.0"
description = ""
authors = [
    {name = "Light"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "flet (>=0.28.3,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "wmi (>=1.5.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "app", from = "src" },
    { include = "screens", from = "src" },
    { include = "utils", from = "src" },
]

[tool.flet]
org = "com.lssproduction"
product = "lsslauncher"
company = "LSSProduction"
copyright = "Copyright (C) 2025 by LSSProduction"
compile.app = true 
compile.packages = true 
compile.cleanup = true 

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Preparing the app for its first launch…"

[tool.flet.flutter.pubspec.dependency_overrides]
webview_flutter_android = "4.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
